<?xml version="1.0"?>
<package>
  <name>roboy_legs_stand_control</name>
  <version>0.0.0</version>
  <description>controlling legs stand via leap motion</description>
  <maintainer email="simon.trendel@tum.de">Simon Trendel</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>common_utilities</build_depend>
  <build_depend>flexrayusbinterface</build_depend>
  <build_depend>rosconsole</build_depend>


  <run_depend>roscpp</run_depend>
  <run_depend>common_utilities</run_depend>
  <run_depend>flexrayusbinterface</run_depend>
  <run_depend>rosconsole</run_depend>

  <export>
  </export>
</package>
